--- a/templates/blog/category.html.twig
+++ b/templates/blog/category.html.twig
@@ -4,7 +4,7 @@
 
 <h1>{{ category.name }}</h1>
     {% for article in articles %}
-    <h2>{{ article.title }}</h2>
+    <h2>{{ article.id ~ article.title }}</h2>
     <p>{{ article.content }}</p>
     {% endfor %}
 {% endblock %}
